--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.6
+  Bugfixes:
+    - Fixed distribution crash after load/save
+---------------------------------------------------------------------------------------------------
 Version: 0.3.5
   Changes:
     - Added changelog
