--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.8
+  Bugfixes:
+    - Fixed migration crash
+---------------------------------------------------------------------------------------------------
+Version: 0.3.7
+  Bugfixes:
+    - Update for Factorio 0.17.35
+---------------------------------------------------------------------------------------------------
 Version: 0.3.6
   Bugfixes:
     - Fixed distribution crash after load/save
