--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.9
+  Bugfixes:
+    - Fixed crash with AAI mods
+---------------------------------------------------------------------------------------------------
 Version: 0.3.8
   Bugfixes:
     - Fixed migration crash
