--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.10
+  Bugfixes:
+    - Fixed crash when using ED in map editor
+---------------------------------------------------------------------------------------------------
 Version: 0.3.9
   Bugfixes:
     - Fixed crash with AAI mods
