--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.14
+  Changes:
+    - Update for Factorio version 0.18
+---------------------------------------------------------------------------------------------------
 Version: 0.3.12
   Changes:
     - Improved SHIFT+C trash list for Industrial Revolution
