--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.15
+  Bugfixes:
+    -  ixed inventory cleanup not working with turrets
+---------------------------------------------------------------------------------------------------
 Version: 0.3.14
   Changes:
     - Update for Factorio version 0.18
