--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.15
   Bugfixes:
-    -  ixed inventory cleanup not working with turrets
+    -  Fixed inventory cleanup not working with turrets
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.14
   Changes:
