--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.16
+Date: 2020-03-17
+  Changes:
+    - Update for Factorio version 0.18.13
+---------------------------------------------------------------------------------------------------
 Version: 0.3.15
   Bugfixes:
     -  Fixed inventory cleanup not working with turrets
