--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.17
+Date: 2020-04-01
+  Bugfixes:
+    -  Fixed that "Always show logistic tab" setting was incompatible with some mods
+---------------------------------------------------------------------------------------------------
 Version: 0.3.16
 Date: 2020-03-17
   Changes:
