--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.18
+Date: 2020-05-02
+  Changes:
+    - Update for Factorio version 0.18.22
+---------------------------------------------------------------------------------------------------
 Version: 0.3.17
 Date: 2020-04-01
   Bugfixes:
