--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 2020-11-27
+  Bugfixes:
+    - Fixed not being able to close the settings window
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2020-11-25
   Changes:
