--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.3
+Date: 2020-12-21
+  Bugfixes:
+    - Fixed startup crash with some scenarios/mods
+---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 2020-12-20
   Changes:
