--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@ Date: 2020-12-28
     - Removed the need to spam Shift+C to distribute all items
   Bugfixes:
     - Fixed Shift+C not distributing ammo to artillery
+    - Other minor fixes
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 2020-12-21
