--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.6
+  Bugfixes:
+    - Fixed crash when distributing non-ammo to turrets
+    - Fixed Shift+C placing fuel in machine outputs
+---------------------------------------------------------------------------------------------------
 Version: 1.0.5
 Date: 2020-12-29
   Bugfixes:
