--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.8
+Date: 2021-02-28
+  Changes:
+    - Disabling Shift+C in map settings now disables logistic slots
+    - The default logistic slots are now only added once at the beginning of the game
+  Bugfixes:
+    - Fixed Shift+C dropping output item to input slot
+    - Fixed missing settings button
+    - Fixed vanilla flying text not being removed properly
+    - Fixed several crashes
+---------------------------------------------------------------------------------------------------
 Version: 1.0.7
 Date: 2021-01-12
   Changes:
