--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.9
+Date: 2021-08-19
+  Bugfixes:
+    - Fixed crash in factorio version 1.1.38
+---------------------------------------------------------------------------------------------------
 Version: 1.0.8
 Date: 2021-02-28
   Changes:
