--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.10
+Date: 2021-08-20
+  Changes:
+    - Added russian translation (thanks to Astorin)
+    - Added remote interface to ignore entities for Ctrl+Click Drag and Shift+C
+---------------------------------------------------------------------------------------------------
 Version: 1.0.9
 Date: 2021-08-19
   Bugfixes:
