Added remote interface that exposes configured fuel and ammo limits.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.11
+Date: ????-??-??
+  Changes:
+    - Added remote interface for retrieving fuel and ammo limit configuration.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.10
 Date: 2021-08-20
   Changes:
