--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.11
+Date: ????-??-??
+  Changes:
+    - Reduce initial limit for ammo to 5% of a stack (10 ammo magazines in a vanilla game).
+---------------------------------------------------------------------------------------------------
 Version: 1.0.10
 Date: 2021-08-20
   Changes:
